Fix multi-author left alignment to match date line

--- a/public/app/scss/index.scss
+++ b/public/app/scss/index.scss
@@ -642,7 +642,7 @@ footer {
 
 .more-authors {
   position: relative;
-  padding: 8px;
+  padding: 0;
   cursor: pointer;
 }
 
